# rpn-calculator

./: .#sc.hpp  .gitignore  Bakerfile.json  Makefile  README.md  arbit.cpp  arbit.hpp  arbit.inl  build.py  main.cpp  make  make.py  meson.build  operations.cpp  sc.cpp  sc.hpp  utility.hpp  wc.cpp  wc.hpp
arbit/: basic.cpp  bits.cpp  construction.cpp  heap.cpp  operations.cpp
archive/: Makefile  make  meson.build
helpers/: fp_to_decimal.py  parse_raw_format.py  scientific_to_float.py
inc/arbit/: arbit.hpp  arbit.inl  defines.hpp
inc/wc/: defines.hpp  utility.hpp  wc.hpp
samples/: ap.sc  basic.sc  comments.sc  coords.sc  ctof.sc  deep_times.sc  det.sc  func.sc  gp.sc  lame.sc  quadratic.sc  sqrt.sc  taylor.sc  times.sc
samples/funcs/: all.sc  basic.sc  det.sc  quadratic.sc  taylor.sc
src/arbit/: arbit.cpp  arbit.cppm  arbit.inl  basic.cpp  bits.cpp  construction.cpp  heap.cpp  operations.cpp
src/ats/: main.cpp
src/main/: main.cpp
src/main-ats/: main.cpp
src/tests/: div.cpp  floats.cpp  fp.cpp  modules.cpp  mul.cpp
src/wc/: basic.cpp  main.cpp  operations.cpp  wc.cpp  wc.cppm
tests/: floats.cpp  fp.cpp
wc/: main.cpp  operations.cpp  wc.cpp
